# FreeRTOS_AEM_Armv8A

./: .gitignore  LICENSE  README.md  gentags.py
Demo/FVP_Base_RevC-2xAEMv8A/: AEMv8A.scat  CMakeLists.txt  FreeRTOSConfig.h  main.c
Demo/FVP_Base_RevC-2xAEMv8A/app/: demo1.c
Demo/FVP_Base_RevC-2xAEMv8A/bsp/: basehw.h  c_ex_handlers.c  gicv3.c  reset.S  vectors.S
Source/portable/ARMClang/Armv8-A_aarch64/: port.c  portASM.S  portmacro.h
